--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
     defaultConfig {
         applicationId "com.jodevapp.anko.recylerview"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 30
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,8 +30,8 @@ androidExtensions {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:recyclerview-v7:$support_library"
-    implementation "com.android.support:appcompat-v7:$support_library"
+    //implementation "com.android.support:recyclerview-v7:$support_library"
+    //implementation "com.android.support:appcompat-v7:$support_library"
     implementation "com.github.bumptech.glide:glide:$glide"
 
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -38,6 +39,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+    // 3 state checkbox
+    implementation 'it.sephiroth.android.library:tri-state-checkbox:1.0.0'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
